--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -23,7 +23,7 @@ html, body, #root, .layout
   height: 100vh
   font-size: 16px
   font-family: fonts.$font_family_sans
-  //overflow: hidden
+  overflow: hidden
 
 
 a
